Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.5.12
-
Windows
Description
Steps to reproduce
- Initializing the MariaDB data directory
C:\Users\Administrator>C:\mariadb-10.5.12-winx64\bin\mysql_install_db.exe --datadir=C:\db --service=MyDB --password=secretRunning bootstrap2021-08-09 17:56:17 0 [Note] C:\mariadb-10.5.12-winx64\bin\mysqld.exe (mysqld 10.5.12-MariaDB) starting as process 1212 ...Removing default userSetting root passwordCreating my.ini fileRegistering service 'MyDB'Creation of the database was successful - Upload the C:\db\my.ini file
[mysqld]datadir=C:/dbskip-grant-tablesskip-networkingenable-named-pipe[client]plugin-dir=C:/mariadb-10.5.12-winx64/lib/plugin - Start service
C:\Users\Administrator>sc start MyDB - Start mysql_upgrade
C:\Users\Administrator>C:\mariadb-10.5.12-winx64\bin\mysql_upgrade.exe --force --host=. --protocol=pipePhase 1/7: Checking and upgrading mysql databaseProcessing databasesmysqlmysql.column_stats OKmysql.columns_priv OKmysql.db OKmysql.event OKmysql.func OKmysql.global_priv OKmysql.gtid_slave_pos OKmysql.help_category OKmysql.help_keyword OKmysql.help_relation OKmysql.help_topic OKmysql.index_stats OKmysql.innodb_index_stats OKmysql.innodb_table_stats OKmysql.plugin OKmysql.proc OKmysql.procs_priv OKmysql.proxies_priv OKmysql.roles_mapping OKmysql.servers OKmysql.table_stats OKmysql.tables_priv OKmysql.time_zone OKmysql.time_zone_leap_second OKmysql.time_zone_name OKmysql.time_zone_transition OKmysql.time_zone_transition_type OKmysql.transaction_registry OKPhase 2/7: Installing used storage engines... SkippedPhase 3/7: Fixing viewsmysql.user OKPhase 4/7: Running 'mysql_fix_privilege_tables'Phase 5/7: Fixing table and database namesPhase 6/7: Checking and upgrading tablesProcessing databasesinformation_schemaperformance_schematestPhase 7/7: Running 'FLUSH PRIVILEGES'OK - Stop service
C:\Users\Administrator>sc stop MyDB
Actual result
mysqld process hands.
In the log file:
2021-08-09 17:56:17 0 [Note] InnoDB: The first innodb_system data file 'ibdata1' did not exist. A new tablespace will be created!
|
2021-08-09 17:56:17 0 [Note] InnoDB: Uses event mutexes
|
2021-08-09 17:56:17 0 [Note] InnoDB: Compressed tables use zlib 1.2.11
|
2021-08-09 17:56:17 0 [Note] InnoDB: Number of pools: 1
|
2021-08-09 17:56:17 0 [Note] InnoDB: Using generic crc32 instructions
|
2021-08-09 17:56:17 0 [Note] InnoDB: Initializing buffer pool, total size = 134217728, chunk size = 134217728
|
2021-08-09 17:56:17 0 [Note] InnoDB: Completed initialization of buffer pool
|
2021-08-09 17:56:17 0 [Note] InnoDB: Setting file '.\ibdata1' size to 12 MB. Physically writing the file full; Please wait ...
|
2021-08-09 17:56:17 0 [Note] InnoDB: File '.\ibdata1' size is now 12 MB.
|
2021-08-09 17:56:17 0 [Note] InnoDB: Setting log file .\ib_logfile101 size to 100663296 bytes
|
2021-08-09 17:56:18 0 [Note] InnoDB: Renaming log file .\ib_logfile101 to .\ib_logfile0
|
2021-08-09 17:56:18 0 [Note] InnoDB: New log file created, LSN=10317
|
2021-08-09 17:56:18 0 [Note] InnoDB: Doublewrite buffer not found: creating new
|
2021-08-09 17:56:18 0 [Note] InnoDB: Doublewrite buffer created
|
2021-08-09 17:56:18 0 [Note] InnoDB: 128 rollback segments are active.
|
2021-08-09 17:56:18 0 [Note] InnoDB: Creating foreign key constraint system tables.
|
2021-08-09 17:56:18 0 [Note] InnoDB: Creating tablespace and datafile system tables.
|
2021-08-09 17:56:18 0 [Note] InnoDB: Creating sys_virtual system tables.
|
2021-08-09 17:56:18 0 [Note] InnoDB: Creating shared tablespace for temporary tables
|
2021-08-09 17:56:18 0 [Note] InnoDB: Setting file '.\ibtmp1' size to 12 MB. Physically writing the file full; Please wait ...
|
2021-08-09 17:56:18 0 [Note] InnoDB: File '.\ibtmp1' size is now 12 MB.
|
2021-08-09 17:56:18 0 [Note] InnoDB: 10.5.12 started; log sequence number 0; transaction id 7
|
2021-08-09 17:56:18 0 [Note] Plugin 'FEEDBACK' is disabled.
|
2021-08-09 18:00:41 0 [Note] InnoDB: Uses event mutexes
|
2021-08-09 18:00:41 0 [Note] InnoDB: Compressed tables use zlib 1.2.11
|
2021-08-09 18:00:41 0 [Note] InnoDB: Number of pools: 1
|
2021-08-09 18:00:41 0 [Note] InnoDB: Using generic crc32 instructions
|
2021-08-09 18:00:41 0 [Note] InnoDB: Initializing buffer pool, total size = 134217728, chunk size = 134217728
|
2021-08-09 18:00:41 0 [Note] InnoDB: Completed initialization of buffer pool
|
2021-08-09 18:00:41 0 [Note] InnoDB: 128 rollback segments are active.
|
2021-08-09 18:00:41 0 [Note] InnoDB: Creating shared tablespace for temporary tables
|
2021-08-09 18:00:41 0 [Note] InnoDB: Setting file '.\ibtmp1' size to 12 MB. Physically writing the file full; Please wait ...
|
2021-08-09 18:00:41 0 [Note] InnoDB: File '.\ibtmp1' size is now 12 MB.
|
2021-08-09 18:00:41 0 [Note] InnoDB: 10.5.12 started; log sequence number 45094; transaction id 20
|
2021-08-09 18:00:41 0 [Note] Plugin 'FEEDBACK' is disabled.
|
2021-08-09 18:00:41 0 [Note] Reading of all Master_info entries succeeded
|
2021-08-09 18:00:41 0 [Note] Added new Master_info '' to hash table
|
2021-08-09 18:00:41 0 [Note] C:\mariadb-10.5.12-winx64\bin\mysqld.exe: ready for connections.
|
Version: '10.5.12-MariaDB' socket: '' port: 0 mariadb.org binary distribution
|
2021-08-09 18:00:41 0 [Note] InnoDB: Loading buffer pool(s) from C:\db\ib_buffer_pool
|
2021-08-09 18:00:41 0 [Note] InnoDB: Buffer pool(s) load completed at 210809 18:00:41
|
2021-08-09 18:02:13 15 [Warning] Access denied for user 'root'@'localhost' (using password: NO)
|
2021-08-09 18:04:09 0 [Note] C:\mariadb-10.5.12-winx64\bin\mysqld.exe (initiated by: unknown): Normal shutdown
|
Attachments
Issue Links
- is caused by
-
MDEV-18353 Shutdown may miss to wait for connection thread
-
- Closed
-
- is duplicated by
-
MDEV-26932 upgrade wizard never finishes at Phase 9/10 and hit "InnoDB: Upgrade after a crash is not supported" after restart
-
- Closed
-
- relates to
-
MDEV-11499 mysqltest, Windows : improve diagnostics if server fails to shutdown
-
- Closed
-