MDEV-26325 - server hangs in shutdown if named pipe connections were used.

This is regression introduced in MDEV-18353.
Fix is to properly count THD and CONNECT object, using generic/templated
object counter.
The implementation is inspired by https://stackoverflow.com/a/1926643/547065