sql/sql_connect.h
@@ -29,7 +29,7 @@
 
 struct scheduler_functions;
 
-class CONNECT : public ilink {
+class CONNECT : public Object_Counter<CONNECT>, public ilink {
 public:
   MYSQL_SOCKET sock;
 #ifdef _WIN32
@@ -44,18 +44,14 @@ public:
   /* Own variables */
   ulonglong    prior_thr_create_utime;
 
-  static Atomic_counter<uint32_t> count;
-
   CONNECT(MYSQL_SOCKET sock_arg, enum enum_vio_type vio_type_arg,
           scheduler_functions *scheduler_arg): sock(sock_arg),
     vio_type(vio_type_arg), scheduler(scheduler_arg), thread_id(0),
     prior_thr_create_utime(0)
   {
-    count++;
   }
   ~CONNECT()
   {
-    count--;
     DBUG_ASSERT(vio_type == VIO_CLOSED);
   }
   void close_and_delete();
